--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-amarillo">
   <div class="container-fluid">
+    <img src="images/logo.png" style="width: 50px; height: 50px;" alt="no se encontro">
     <a class="navbar-brand" href="http://localhost:3000/">PARADISE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
